--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@
     justify-content: space-evenly;
     margin-top: 30px;
     animation-name: colorchange;
-    animation-duration: 4s;
+    animation-duration: 10s;
     animation-iteration-count: 3;
 }
 .fa-ticket{
@@ -239,6 +239,22 @@
 .footer-nav li a{
     text-decoration: none;
     color: #fff;
+}
+.soc-div{
+    display: flex;
+    justify-content: space-around;
+    width: 200px;
+    padding-bottom: 20px;
+}
+.social-btn{
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #26001B;
+    cursor: pointer;
 }
 
 /* -------------------------------
@@ -470,6 +486,9 @@
         flex-direction: column;
         justify-content: space-evenly;
     }
+    .soc-div{
+        overflow-y: hidden;
+    }
 }
 
 /*--------------------------------
@@ -551,6 +570,9 @@
         height: 70%;
         flex-direction: column;
         justify-content: space-evenly;
+    }
+    .soc-div{
+        overflow-y: hidden;
     }
 }
 
